--- a/templates/basic.html
+++ b/templates/basic.html
@@ -14,6 +14,11 @@
     </head>
     <body>
     <h1>Welcome to the site!</h1>
+        <ul>
+            {% for item in mylist %}
+            <li>{{item}}</li>
+            {% endfor %}
+        </ul>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
