Updated list items into Hawaiian locations.

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -15,8 +15,8 @@
     <body>
     <h1>Welcome to the site!</h1>
         <ul>
-            {% for item in mylist %}
-            <li>{{item}}</li>
+            {% for location in locations %}
+            <li>{{location}}</li>
             {% endfor %}
         </ul>
         <!--[if lt IE 7]>
