Added an image and set that as the background image.

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -11,6 +11,13 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+        <style>
+        body{
+            background-image:
+        url('./static/NapaliCoast.jpg');
+            background-size: cover;
+        }
+        </style>
     </head>
     <body>
     <h1>Welcome to the site!</h1>
