added a capitalize filter to make sure everything is capital case.

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -23,7 +23,7 @@
     <h1>Welcome to the site!</h1>
         <ul>
             {% for location in locations %}
-            <li>{{location}}</li>
+            <li>{{location | capitalize}}</li>
             {% endfor %}
         </ul>
         <!--[if lt IE 7]>
